compile_tests/expected/control_flow.stderr
error: labels not supported
 --> compile_tests/src/control_flow.rs:6:9
  |
6 |         'label: while true {
  |         ^^^^^^

error: labels not supported
 --> compile_tests/src/control_flow.rs:7:22
  |
7 |             continue 'label;
  |                      ^^^^^^

error: labels not supported
 --> compile_tests/src/control_flow.rs:8:19
  |
8 |             break 'label;
  |                   ^^^^^^

error: break expressions not supported
 --> compile_tests/src/control_flow.rs:9:19
  |
9 |             break 0;
  |                   ^

error: labels not supported
  --> compile_tests/src/control_flow.rs:11:9
   |
11 |         'label: for i in 0_u32..1_u32 {}
   |         ^^^^^^

error: not allowed outside loops
  --> compile_tests/src/control_flow.rs:12:9
   |
12 |         continue;
   |         ^^^^^^^^

error: not allowed outside loops
  --> compile_tests/src/control_flow.rs:13:9
   |
13 |         break;
   |         ^^^^^

error: unsupported variable definition syntax
  --> compile_tests/src/control_flow.rs:14:13
   |
14 |         for (a, b, c) in 0_u32..1_u32 {}
   |             ^^^^^^^^^

error[E0308]: mismatched types
  --> compile_tests/src/control_flow.rs:14:13
   |
14 |         for (a, b, c) in 0_u32..1_u32 {}
   |         --- ^^^^^^^^^ expected `U32`, found `(_, _, _)`
   |         |
   |         this expression has type `&U32`
   |
   = note: expected struct `U32`
               found tuple `(_, _, _)`